--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="mainStyle.css">
     <link rel="stylesheet" href="navbar.css">
 
-    <title>Jeffrey Aaron</title>
+    <title>Jeffrey Aaron Jeyasingh</title>
 </head>
 <body>
     <!-- Navbar -->
