--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Navbar -->
     <nav id="navbar">
         <ul id="navbarList">
-            <li class="navbarButton logo">Jeffrey Aaron</li>
+            <li class="navbarButton logo">Jeffrey Aaron Jeyasingh</li>
             <div class="navbarButtonRight">
                 <li class="navbarButton">Projects</li>
                 <li class="navbarButton">My Experience</li>
